--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,25 @@
-<nav class="navbar navbar-expand-lg navbar-dark custom-bg-nav">
-    <a class="navbar-brand" routerLink="/home">FindingFalcone</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" routerLink="#">FindingFalcone</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse"
+        data-target="#collapsibleNavbar" [attr.aria-expanded]="!isCollapsed"
+        (click)="isCollapsed = !isCollapsed">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="collapsibleNavbar" [ngbCollapse]="isCollapsed">
+      <ul class="navbar-nav ml-auto">
+          <li class="nav-item" data-toggle="tab">
+              <a class="nav-link" routerLink="/find">Find Falcone</a>
+          </li>
+          <li class="nav-item" data-toggle="tab">
+              <a class="nav-link" routerLink="/home"><i class="fas fa-home"></i>
+                <span class="sr-only">(current)</span>
+            </a>
+          </li>
+      </ul>
+  </div>
 </nav>
+<footer class="action-bar">
+    <div class="text-right">&copy;RamyaShivu</div>
+    <div><a href="https://www.linkedin.com/in/ramya-h-s/" target="_blank"><i class="fab fa-linkedin-in"></i></a></div>
+</footer>
 <router-outlet></router-outlet>
