Home comp styling changes

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -15,8 +15,8 @@
                 </h6>
                 <hr />
                 <section>
-                    <h4 class="text-center text-primary">
-                        Possible Hideouts
+                    <h4 class="text-center text-secondary">
+                        Queen's possible Hideouts
                     </h4>
                     <div class="planet-container row">
                         <div class="col-md-2">
@@ -77,8 +77,8 @@
                 </section>
                 <hr />
                 <section>
-                    <h4 class="text-center text-primary">Vehicles Available</h4>
-                    <div class="vehicle-container row">
+                    <h4 class="text-center text-secondary">Vehicles Available</h4>
+                    <div class="vehicle-container row justify-content-center">
                         <div class="col-md-3">
                             <div class="card">
                                 <img class="card-img-top" src="../../../assets/images/v-1.png" alt="Card image cap">
@@ -134,9 +134,9 @@
                     </div>
                 </section>
             </div>
-        </div>
-        <div class="text-center mt-2">
-            <button class="btn btn-outline-primary" (click)="findFalcone()">Let's find the Queen!</button>
+            <div class="text-center mt-1 mb-2">
+                <button class="btn btn-lg btn-outline-primary" (click)="findFalcone()">Let's find the Queen!</button>
+            </div>
         </div>
     </div>
 </section>
