--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,142 +1,140 @@
-<section class="mb-5">
-    <div class="container-fluid">
-        <div class="card mt-4 display-info">
-            <div class="card-body">
-                <h5 class="text-center">
-                    In the distant galaxy of Tara B, there exists a planet of LENGABURU. <br/>
-                    After the recent war with neighbouring planet Falicornia, King Shan has exiled the Queen of Falicornia
-                    for 15 years.<br />
-                    <span><i class="text-primary">Queen Al Falcone</i> is now in HIDING.</span>
-                </h5>
-                <h6 class="text-center">
-                    But if King Shan can find
-                    her before the years are up, she will be exiled for another 15
-                    years!
-                </h6>
-                <hr />
-                <section>
-                    <h4 class="text-center text-secondary">
-                        Queen's possible Hideouts
-                    </h4>
-                    <div class="planet-container row">
-                        <div class="col-md-2">
-                            <div class="card">
-                                <img class="card-img-top" src="../../../assets/images/p-1.jpg" alt="Card image cap">
-                                <div class="card-body">
-                                    <p class="card-text">DONLON</p>
-                                    <p class="card-text">Distance - 100 megamiles</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="card">
-                                <img class="card-img-top" src="../../../assets/images/p-2.jpg" alt="Card image cap">
-                                <div class="card-body">
-                                    <p class="card-text">ENCHAI</p>
-                                    <p class="card-text">Distance - 200 megamiles</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="card">
-                                <img class="card-img-top" src="../../../assets/images/p-3.jpg" alt="Card image cap">
-                                <div class="card-body">
-                                    <p class="card-text">JEBING</p>
-                                    <p class="card-text">Distance - 300 megamiles</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="card">
-                                <img class="card-img-top" src="../../../assets/images/p-4.jpg" alt="Card image cap">
-                                <div class="card-body">
-                                    <p class="card-text">SAPIR</p>
-                                    <p class="card-text">Distance - 400 megamiles</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="card">
-                                <img class="card-img-top" src="../../../assets/images/p-5.jpg" alt="Card image cap">
-                                <div class="card-body">
-                                    <p class="card-text">LERBIN</p>
-                                    <p class="card-text">Distance - 500 megamiles</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-2">
-                            <div class="card">
-                                <img class="card-img-top" src="../../../assets/images/p-6.jpg" alt="Card image cap">
-                                <div class="card-body">
-                                    <p class="card-text">PINGASOR</p>
-                                    <p class="card-text">Distance - 600 megamiles</p>
-                                </div>
+<div class="container-fluid">
+    <div class="display-info">
+        <div>
+            <h5 class="text-center">
+                In the distant galaxy of Tara B, there exists a planet of LENGABURU. <br/>
+                After the recent war with neighbouring planet Falicornia, King Shan has exiled the Queen of Falicornia
+                for 15 years.<br />
+                <span><i class="text-primary">Queen Al Falcone</i> is now in HIDING.</span>
+            </h5>
+            <h6 class="text-center">
+                But if King Shan can find
+                her before the years are up, she will be exiled for another 15
+                years!
+            </h6>
+            <hr />
+            <section>
+                <h4 class="text-center text-secondary">
+                    Queen's possible Hideouts
+                </h4>
+                <div class="planet-container row">
+                    <div class="col-md-2">
+                        <div class="card">
+                            <!-- <img class="card-img-top" src="../../../assets/images/p-1.jpg" alt="Card image cap"> -->
+                            <div class="card-body">
+                                <p class="font-weight-bold">DONLON</p>
+                                <p>Distance - 100 megamiles</p>
                             </div>
                         </div>
                     </div>
-                </section>
-                <hr />
-                <section>
-                    <h4 class="text-center text-secondary">Vehicles Available</h4>
-                    <div class="vehicle-container row justify-content-center">
-                        <div class="col-md-3">
-                            <div class="card">
-                                <img class="card-img-top" src="../../../assets/images/v-1.png" alt="Card image cap">
-                                <div class="card-body">
-                                    <p class="card-text">SPACE POD</p>
-                                    <ul>
-                                        <li>2 Units</li>
-                                        <li>Travels upto 200 megamiles</li>
-                                        <li>Speed 2 megamiles/hour</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card">
-                                <img class="card-img-top" src="../../../assets/images/v-2.png" alt="Card image cap">
-                                <div class="card-body">
-                                    <p class="card-text">SPACE ROCKET</p>
-                                    <ul>
-                                        <li>1 Units</li>
-                                        <li>Travels upto 200 megamiles</li>
-                                        <li>Speed 4 megamiles/hour</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card">
-                                <img class="card-img-top" src="../../../assets/images/v-3.png" alt="Card image cap">
-                                <div class="card-body">
-                                    <p class="card-text">SPACE SHUTTLE</p>
-                                    <ul>
-                                        <li>1 Units</li>
-                                        <li>Travels upto 400 megamiles</li>
-                                        <li>Speed 5 megamiles/hour</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3">
-                            <div class="card">
-                                <img class="card-img-top" src="../../../assets/images/v-4.png" alt="Card image cap">
-                                <div class="card-body">
-                                    <p class="card-text">SPACE SHIP</p>
-                                    <ul>
-                                        <li>2 Units</li>
-                                        <li>Travels upto 600 megamiles</li>
-                                        <li>Speed 10 megamiles/hour</li>
-                                    </ul>
-                                </div>
+                    <div class="col-md-2">
+                        <div class="card">
+                            <!-- <img class="card-img-top" src="../../../assets/images/p-2.jpg" alt="Card image cap"> -->
+                            <div class="card-body">
+                                <p class="font-weight-bold">ENCHAI</p>
+                                <p>Distance - 200 megamiles</p>
                             </div>
                         </div>
                     </div>
-                </section>
-            </div>
-            <div class="text-center mt-1 mb-2">
-                <button class="btn btn-lg btn-outline-primary" (click)="findFalcone()">Let's find the Queen!</button>
-            </div>
+                    <div class="col-md-2">
+                        <div class="card">
+                            <!-- <img class="card-img-top" src="../../../assets/images/p-3.jpg" alt="Card image cap"> -->
+                            <div class="card-body">
+                                <p class="font-weight-bold">JEBING</p>
+                                <p>Distance - 300 megamiles</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="card">
+                            <!-- <img class="card-img-top" src="../../../assets/images/p-4.jpg" alt="Card image cap"> -->
+                            <div class="card-body">
+                                <p class="font-weight-bold">SAPIR</p>
+                                <p>Distance - 400 megamiles</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="card">
+                            <!-- <img class="card-img-top" src="../../../assets/images/p-5.jpg" alt="Card image cap"> -->
+                            <div class="card-body">
+                                <p class="font-weight-bold">LERBIN</p>
+                                <p>Distance - 500 megamiles</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="card">
+                            <!-- <img class="card-img-top" src="../../../assets/images/p-6.jpg" alt="Card image cap"> -->
+                            <div class="card-body">
+                                <p class="font-weight-bold">PINGASOR</p>
+                                <p>Distance - 600 megamiles</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <hr />
+            <section>
+                <h4 class="text-center text-secondary">Vehicles Available</h4>
+                <div class="vehicle-container row justify-content-center">
+                    <div class="col-md-3">
+                        <div class="card">
+                            <!-- <img class="card-img-top" src="../../../assets/images/v-1.png" alt="Card image cap"> -->
+                            <div class="card-body">
+                                <p class="card-text">SPACE POD</p>
+                                <ul>
+                                    <li>2 Units</li>
+                                    <li>Travels upto 200 megamiles</li>
+                                    <li>Speed 2 megamiles/hour</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <!-- <img class="card-img-top" src="../../../assets/images/v-2.png" alt="Card image cap"> -->
+                            <div class="card-body">
+                                <p class="card-text">SPACE ROCKET</p>
+                                <ul>
+                                    <li>1 Units</li>
+                                    <li>Travels upto 200 megamiles</li>
+                                    <li>Speed 4 megamiles/hour</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <!-- <img class="card-img-top" src="../../../assets/images/v-3.png" alt="Card image cap"> -->
+                            <div class="card-body">
+                                <p class="card-text">SPACE SHUTTLE</p>
+                                <ul>
+                                    <li>1 Units</li>
+                                    <li>Travels upto 400 megamiles</li>
+                                    <li>Speed 5 megamiles/hour</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <!-- <img class="card-img-top" src="../../../assets/images/v-4.png" alt="Card image cap"> -->
+                            <div class="card-body">
+                                <p class="card-text">SPACE SHIP</p>
+                                <ul>
+                                    <li>2 Units</li>
+                                    <li>Travels upto 600 megamiles</li>
+                                    <li>Speed 10 megamiles/hour</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <div class="text-center mt-1 mb-2">
+            <button class="btn btn-lg btn-outline-primary" (click)="findFalcone()">Let's find the Queen!</button>
         </div>
     </div>
-</section>
+</div>
