--- a/src/styles/_cards.scss
+++ b/src/styles/_cards.scss
@@ -9,3 +9,19 @@
         min-height: 12rem;
     }
 }
+.planet-container, .vehicle-container {
+    display: flex;
+    .card {
+        margin-bottom: 0.25rem;
+    }
+    .card-text {
+        text-align: center;
+        font-weight: 600;
+    }
+    .card-body {
+        padding: 0.75rem;
+        p {
+            margin-bottom: 0px;
+        }
+    }
+}
