--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -1,19 +1,13 @@
-.planet-container {
-    display: flex;
-    .card {
-        margin-bottom: 0.25rem;
-    }
-}
-.vehicle-container{
-    .card{
-        margin: 0.25rem;
-    }
-    p {
-        text-align: center;
-    }
-}
+
 .spinner-border {
     width: 10rem;
     height: 10rem;
     margin-top: 12%;
+}
+.display-info {
+    margin-top: 1.5rem;
+    padding: 0.5rem;
+    background-color: $white;
+    border: 1px solid $gray-100;
+    border-radius: 0.5rem;
 }
