--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -2,15 +2,32 @@
     position: fixed;
     width: 100%;
     z-index: 10;
-    padding: 10px 40px;
-    img {
-        width: 30px;
-    }
-    div {
-        display: inline;
-        margin-left: 10px;
-        font-size: 18px;
-        font-weight: 500;
+    top: 0px;
+}
+.navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
+    color: rgb(255 255 255);
+}
+.section-content {
+    margin-top: 5%;
+    margin-bottom: 3rem;
+}
+@media screen and (max-width: 1024px) {
+    .section-content {
+        margin-top: 7%;
     }
 }
-
+@media screen and (max-width: 850px) {
+    .section-content {
+        margin-top: 10%;
+    }
+}
+@media screen and (max-width: 640px) {
+    .section-content {
+        margin-top: 12%;
+    }
+}
+@media screen and (max-width: 500px) {
+    .section-content {
+        margin-top: 15%;
+    }
+}
