Removed all unused styles and style sheets

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -84,7 +84,7 @@
                             <div class="card-body">
                                 <p class="card-text">SPACE POD</p>
                                 <ul>
-                                    <li>2 Units</li>
+                                    <li>2 Unit(s)</li>
                                     <li>Travels upto 200 megamiles</li>
                                     <li>Speed 2 megamiles/hour</li>
                                 </ul>
@@ -97,7 +97,7 @@
                             <div class="card-body">
                                 <p class="card-text">SPACE ROCKET</p>
                                 <ul>
-                                    <li>1 Units</li>
+                                    <li>1 Unit(s)</li>
                                     <li>Travels upto 200 megamiles</li>
                                     <li>Speed 4 megamiles/hour</li>
                                 </ul>
@@ -110,7 +110,7 @@
                             <div class="card-body">
                                 <p class="card-text">SPACE SHUTTLE</p>
                                 <ul>
-                                    <li>1 Units</li>
+                                    <li>1 Unit(s)</li>
                                     <li>Travels upto 400 megamiles</li>
                                     <li>Speed 5 megamiles/hour</li>
                                 </ul>
@@ -123,7 +123,7 @@
                             <div class="card-body">
                                 <p class="card-text">SPACE SHIP</p>
                                 <ul>
-                                    <li>2 Units</li>
+                                    <li>2 Unit(s)</li>
                                     <li>Travels upto 600 megamiles</li>
                                     <li>Speed 10 megamiles/hour</li>
                                 </ul>
