--- a/src/styles/_cards.scss
+++ b/src/styles/_cards.scss
@@ -23,5 +23,9 @@
         p {
             margin-bottom: 0px;
         }
+        ul {
+            padding: 1rem;
+            margin-bottom: 0px;
+        }
     }
 }
