--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -10,4 +10,7 @@
     background-color: $white;
     border: 1px solid $gray-100;
     border-radius: 0.5rem;
+    position: relative;
+    left: 10%;
+    width: 80%;
 }
